docs: add selector info-boxes and improve annotation contrast

--- a/css-selectors.html
+++ b/css-selectors.html
@@ -181,6 +181,11 @@
                     • Project descriptions (2)<br>
                     • Footer copyright
                 </div>
+                <div class="info-box" style="margin-top:12px;">
+                    <h4>Quick tip</h4>
+                    <p><strong>Example:</strong> <code>p { color: white; }</code></p>
+                    <p>This selector matches <strong>6</strong> elements in the demo. Use element selectors for broad styling.</p>
+                </div>
             </div>
 
             <div class="annotation">
@@ -191,6 +196,11 @@
                     • E-commerce Site card<br>
                     Both get the same styling!
                 </div>
+                <div class="info-box" style="margin-top:12px;">
+                    <h4>Quick tip</h4>
+                    <p><strong>Example:</strong> <code>.project-card { padding: 30px; }</code></p>
+                    <p>This selector matches <strong>2</strong> elements in the demo. Classes are reusable across many elements.</p>
+                </div>
             </div>
 
             <div class="annotation">
@@ -199,6 +209,11 @@
                     Targets 1 unique element:<br>
                     • The purple header section<br>
                     Only ONE element can have this ID per page!
+                </div>
+                <div class="info-box" style="margin-top:12px;">
+                    <h4>Quick tip</h4>
+                    <p><strong>Example:</strong> <code>#main-header { background: purple; }</code></p>
+                    <p>IDs are unique — this matches <strong>1</strong> element. Use IDs for single, unique components.</p>
                 </div>
             </div>
         </div>
