Add border-box vs content-box comparison to box-model demo

--- a/demo-assignment.html
+++ b/demo-assignment.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 1 Demo - Navigation</title>
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="demo-assignment.css">
 </head>
 <body>
     <div class="container">
-        <h1>Lesson 1 CSS Demo</h1>
+        <h1>Lesson 1 Demo</h1>
         
         <div class="disclaimer">
             <strong>Disclaimer:</strong> This is just to play around - for educational purpose
@@ -20,8 +20,8 @@
                 <p>Learn about different CSS selector types and how to target elements</p>
             </a>
 
-            <a href="css-specificity.html" class="nav-card">
-                <h3>CSS Specificity</h3>
+            <a href="css-specificity.html" class="nav-card" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
+                <h3>⚔️ CSS Specificity Battle NEW!</h3>
                 <p>Discover which CSS rules win when multiple rules target the same element</p>
             </a>
 
