Fix CSS code blocks: add proper line breaks and maintain correct indentation

--- a/css-specificity.html
+++ b/css-specificity.html
@@ -120,6 +120,7 @@
 <span class="html-tag">&lt;button</span> <span class="html-attr">class</span>=<span class="html-value">"primary-btn"</span><span class="html-tag">&gt;</span><span class="html-text">Click Me</span><span class="html-tag">&lt;/button&gt;</span></div>
 
                     <div class="css-code-block"><span class="css-comment">/* CSS Rules */</span>
+
 <span class="css-selector">button</span> {
   <span class="css-property">color</span>: <span class="css-value">blue</span>;
   <span class="css-property">background</span>: <span class="css-value">gray</span>;
@@ -128,7 +129,8 @@
 <span class="css-selector">.primary-btn</span> {
   <span class="css-property">color</span>: <span class="css-value">white</span>;
   <span class="css-property">background</span>: <span class="css-value">green</span>;
-}  <span class="css-comment">/* Specificity: 0,0,1,0 - WINS! */</span></div>
+}  <span class="css-comment">/* Specificity: 0,0,1,0 - WINS! */</span>
+</div>
 
                     <div class="visual-output-label">📺 Visual Output:</div>
                     <div class="visual-output">
@@ -150,6 +152,7 @@
 <span class="html-tag">&lt;/h1&gt;</span></div>
 
                     <div class="css-code-block"><span class="css-comment">/* CSS Rules */</span>
+
 <span class="css-selector">.header-text</span> {
   <span class="css-property">color</span>: <span class="css-value">blue</span>;
   <span class="css-property">font-size</span>: <span class="css-value">20px</span>;
@@ -158,7 +161,8 @@
 <span class="css-selector">#main-title</span> {
   <span class="css-property">color</span>: <span class="css-value">purple</span>;
   <span class="css-property">font-size</span>: <span class="css-value">32px</span>;
-}  <span class="css-comment">/* Specificity: 0,1,0,0 - WINS! */</span></div>
+}  <span class="css-comment">/* Specificity: 0,1,0,0 - WINS! */</span>
+</div>
 
                     <div class="visual-output-label">📺 Visual Output:</div>
                     <div class="visual-output">
@@ -180,6 +184,7 @@
 <span class="html-tag">&lt;/div&gt;</span></div>
 
                     <div class="css-code-block"><span class="css-comment">/* CSS Rules */</span>
+
 <span class="css-selector">.card</span> {
   <span class="css-property">background</span>: <span class="css-value">white</span>;
   <span class="css-property">border</span>: <span class="css-value">1px solid gray</span>;
@@ -188,7 +193,8 @@
 <span class="css-selector">.card.featured</span> {
   <span class="css-property">background</span>: <span class="css-value">gold</span>;
   <span class="css-property">border</span>: <span class="css-value">3px solid orange</span>;
-}  <span class="css-comment">/* Specificity: 0,0,2,0 - WINS! */</span></div>
+}  <span class="css-comment">/* Specificity: 0,0,2,0 - WINS! */</span>
+</div>
 
                     <div class="visual-output-label">📺 Visual Output:</div>
                     <div class="visual-output">
@@ -210,6 +216,7 @@
 <span class="html-tag">&lt;/p&gt;</span></div>
 
                     <div class="css-code-block"><span class="css-comment">/* CSS Rules */</span>
+
 <span class="css-selector">#special-text</span> {
   <span class="css-property">color</span>: <span class="css-value">blue</span>;
   <span class="css-property">font-weight</span>: <span class="css-value">bold</span>;
@@ -217,7 +224,8 @@
 
 <span class="css-comment">/* Inline style attribute */</span>
 <span class="css-selector">style="color: red;"</span>
-<span class="css-comment">/* Specificity: 1,0,0,0 - WINS! */</span></div>
+<span class="css-comment">/* Specificity: 1,0,0,0 - WINS! */</span>
+</div>
 
                     <div class="visual-output-label">📺 Visual Output:</div>
                     <div class="visual-output">
