Fix HTML formatting: add line break after HTML comment in Example 1

--- a/css-specificity.html
+++ b/css-specificity.html
@@ -117,7 +117,9 @@
                     <h3>🥊 Example 1: Element vs Class</h3>
                     
                     <div class="html-code-block"><span class="html-comment">&lt;!-- HTML Code --&gt;</span>
-<span class="html-tag">&lt;button</span> <span class="html-attr">class</span>=<span class="html-value">"primary-btn"</span><span class="html-tag">&gt;</span><span class="html-text">Click Me</span><span class="html-tag">&lt;/button&gt;</span></div>
+<span class="html-tag">&lt;button</span> <span class="html-attr">class</span>=<span class="html-value">"primary-btn"</span><span class="html-tag">&gt;</span>
+  <span class="html-text">Click Me</span>
+<span class="html-tag">&lt;/button&gt;</span></div>
 
                     <div class="css-code-block"><span class="css-comment">/* CSS Rules */</span>
 
