Improve HTML code block formatting: add proper line breaks and indentation for all examples

--- a/css-specificity.html
+++ b/css-specificity.html
@@ -119,7 +119,8 @@
                     <div class="html-code-block"><span class="html-comment">&lt;!-- HTML Code --&gt;</span>
 <span class="html-tag">&lt;button</span> <span class="html-attr">class</span>=<span class="html-value">"primary-btn"</span><span class="html-tag">&gt;</span>
   <span class="html-text">Click Me</span>
-<span class="html-tag">&lt;/button&gt;</span></div>
+<span class="html-tag">&lt;/button&gt;</span>
+</div>
 
                     <div class="css-code-block"><span class="css-comment">/* CSS Rules */</span>
 
@@ -151,7 +152,8 @@
                     <div class="html-code-block"><span class="html-comment">&lt;!-- HTML Code --&gt;</span>
 <span class="html-tag">&lt;h1</span> <span class="html-attr">id</span>=<span class="html-value">"main-title"</span> <span class="html-attr">class</span>=<span class="html-value">"header-text"</span><span class="html-tag">&gt;</span>
   <span class="html-text">Welcome</span>
-<span class="html-tag">&lt;/h1&gt;</span></div>
+<span class="html-tag">&lt;/h1&gt;</span>
+</div>
 
                     <div class="css-code-block"><span class="css-comment">/* CSS Rules */</span>
 
@@ -183,7 +185,8 @@
                     <div class="html-code-block"><span class="html-comment">&lt;!-- HTML Code --&gt;</span>
 <span class="html-tag">&lt;div</span> <span class="html-attr">class</span>=<span class="html-value">"card featured"</span><span class="html-tag">&gt;</span>
   <span class="html-text">Featured Item</span>
-<span class="html-tag">&lt;/div&gt;</span></div>
+<span class="html-tag">&lt;/div&gt;</span>
+</div>
 
                     <div class="css-code-block"><span class="css-comment">/* CSS Rules */</span>
 
@@ -215,7 +218,8 @@
                     <div class="html-code-block"><span class="html-comment">&lt;!-- HTML Code --&gt;</span>
 <span class="html-tag">&lt;p</span> <span class="html-attr">id</span>=<span class="html-value">"special-text"</span> <span class="html-attr">style</span>=<span class="html-value">"color: red;"</span><span class="html-tag">&gt;</span>
   <span class="html-text">Important Text</span>
-<span class="html-tag">&lt;/p&gt;</span></div>
+<span class="html-tag">&lt;/p&gt;</span>
+</div>
 
                     <div class="css-code-block"><span class="css-comment">/* CSS Rules */</span>
 
