Replace Display and Layout button with Box Sizing button linking to box-model.html

--- a/box-model.html
+++ b/box-model.html
@@ -129,7 +129,7 @@
         </div>
 
         <!-- Box-Sizing Comparison Section -->
-        <div class="card full-width-card">
+        <div class="card full-width-card" id="box-sizing">
             <h2>📏 box-sizing: content-box vs border-box</h2>
             <p class="section-description">Understanding how <code>box-sizing</code> affects element dimensions</p>
 
