--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <p>Understand the CSS box model: margin, border, padding, and content</p>
             </a>
 
-            <a href="display-and-layout.html" class="nav-card">
-                <h3>Display and Layout</h3>
-                <p>Master CSS display properties and layout techniques</p>
+            <a href="box-model.html#box-sizing" class="nav-card">
+                <h3>Box Sizing</h3>
+                <p>Learn the difference between content-box and border-box</p>
             </a>
         </div>
 
