Fix filter system: show <div> instead of .project-card in HTML Elements list

--- a/css-selectors.html
+++ b/css-selectors.html
@@ -49,10 +49,10 @@
                             <div class="mini-element" data-type="h2">&lt;h2&gt;</div>
                             <div class="mini-element" data-type="p">&lt;p&gt;</div>
                             <div class="mini-element" data-type="p">&lt;p&gt;</div>
-                            <div class="mini-element" data-type="div-class">.project-card</div>
+                            <div class="mini-element" data-type="div-class">&lt;div&gt;</div>
                             <div class="mini-element" data-type="h3">&lt;h3&gt;</div>
                             <div class="mini-element" data-type="p">&lt;p&gt;</div>
-                            <div class="mini-element" data-type="div-class">.project-card</div>
+                            <div class="mini-element" data-type="div-class">&lt;div&gt;</div>
                             <div class="mini-element" data-type="h3">&lt;h3&gt;</div>
                             <div class="mini-element" data-type="p">&lt;p&gt;</div>
                             <div class="mini-element" data-type="footer">&lt;footer&gt;</div>
