Enhance Step 2: explain how the filter funnel works (input -> filter -> output)

--- a/css-selectors.html
+++ b/css-selectors.html
@@ -21,10 +21,10 @@
                 <h3>🎯 How to Use This Playground</h3>
                 <ul>
                     <li><strong>Step 1:</strong> Click any selector button below (Element, Class, ID, or Universal)</li>
-                    <li><strong>Step 2:</strong> Watch the <strong>Filter Funnel</strong> show which HTML elements match</li>
+                    <li><strong>Step 2:</strong> Watch the <strong>🔍 Filter Funnel</strong> - it takes ALL HTML elements (left), filters them through the CSS selector (middle), and shows only the matched elements (right)</li>
                     <li><strong>Step 3:</strong> See the matched elements highlighted in the <strong>📝 HTML Code</strong> panel</li>
                     <li><strong>Step 4:</strong> View how they appear in the <strong>🖼️ Visual Output</strong> (browser rendering)</li>
-                    <li><strong>💡 Tip:</strong> All three sections update simultaneously to show you the complete picture!</li>
+                    <li><strong>💡 Key Concept:</strong> CSS selectors act like filters - they select which elements receive styling!</li>
                 </ul>
             </div>
 
