Add Styling Boxes playground with interactive controls for padding, border, margin, border-radius, and box-shadow

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                 <h3>Box Sizing</h3>
                 <p>Learn the difference between content-box and border-box</p>
             </a>
+
+            <a href="styling-boxes.html" class="nav-card">
+                <h3>Styling Boxes</h3>
+                <p>Interactive playground to experiment with padding, borders, margins, border-radius, and box-shadow</p>
+            </a>
         </div>
 
         <div class="footer">
